--- a/po/es.po
+++ b/po/es.po
@@ -2,13 +2,14 @@
 # This file is put in the public domain.
 # 
 # Translators:
+# Hans-Christoph Steiner <hans@eds.org>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-12-31 20:40-0500\n"
-"PO-Revision-Date: 2012-12-26 18:03+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-01-07 01:40+0000\n"
+"Last-Translator: Hans-Christoph Steiner <hans@eds.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -160,7 +161,7 @@ msgid "Configuring Info.plist..."
 msgstr "Configurando Info.plist..."
 
 msgid "Copy"
-msgstr "Copiar\n\n\nCopiar"
+msgstr "Copiar"
 
 msgid "Copying current patch..."
 msgstr "Copiando parche seleccionado..."
