--- a/po/fr.po
+++ b/po/fr.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
-"POT-Creation-Date: 2013-01-09 00:45-0500\n"
-"PO-Revision-Date: 2013-01-09 10:25+0000\n"
-"Last-Translator: dwan <dwanafite@yahoo.fr>\n"
+"POT-Creation-Date: 2013-01-11 23:46-0500\n"
+"PO-Revision-Date: 2013-01-17 18:30+0000\n"
+"Last-Translator: Pierre-Olivier Boulant <po.boulant@free.fr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -183,6 +183,13 @@ msgstr "Copier"
 msgid "Copying current patch..."
 msgstr "Copie du patch courant..."
 
+msgid "Could not delete 'HKEY_LOCAL_MACHINE\\Software\\Pd-extended':"
+msgstr "Impossible de supprimer  'HKEY_LOCAL_MACHINE\\Software\\Pd-extended' :"
+
+#, tcl-format
+msgid "Could not parse registry file: '%s'"
+msgstr "Impossible de lire le fichier du registre : '%s'"
+
 #, tcl-format
 msgid "Couldn't find '%s' in %s"
 msgstr "Impossible de trouver '%s' dans %s"
@@ -214,6 +221,16 @@ msgstr "Latence (msec) :"
 
 msgid "Delete array"
 msgstr "Supprimer le tableau"
+
+#, tcl-format
+msgid "Deleting preferences file: %s"
+msgstr "Suppression du fichier de préférences : %s"
+
+msgid "Deleting preferences in HKEY_CURRENT_USER\\Software\\Pd-extended"
+msgstr "Suppression des préférences dans HKEY_CURRENT_USER\\Software\\Pd-extended"
+
+msgid "Deleting preferences in HKEY_LOCAL_MACHINE\\Software\\Pd-extended"
+msgstr "Suppression des préférences dans HKEY_LOCAL_MACHINE\\Software\\Pd-extended"
 
 #, tcl-format
 msgid "Discard changes to '%s'?"
@@ -577,6 +594,10 @@ msgstr "Signaler un bogue"
 
 msgid "Reset to Defaults"
 msgstr "Valeurs par défaut"
+
+#, tcl-format
+msgid "Reseting registry from %s"
+msgstr "Réinitialisation du registre à partir de %s"
 
 msgid "Right"
 msgstr "Droite"
