--- a/po/cs.po
+++ b/po/cs.po
@@ -2,13 +2,14 @@
 # This file is put in the public domain.
 # 
 # Translators:
+# Aleš Černý <ales.cerny@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2013-01-11 23:46-0500\n"
-"PO-Revision-Date: 2012-12-26 18:03+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-01-18 12:15+0000\n"
+"Last-Translator: ales_cerny <ales.cerny@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,7 +23,7 @@ msgstr "%s Font"
 
 #, tcl-format
 msgid "%s Properties"
-msgstr ""
+msgstr "%s Vlastnosti"
 
 #, tcl-format
 msgid "%s is complete!"
