--- a/po/de.po
+++ b/po/de.po
@@ -2,13 +2,14 @@
 # This file is put in the public domain.
 # 
 # Translators:
+#  <maxneupert@gmail.com>, 2013.
 #   <maxneupert@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
-"POT-Creation-Date: 2012-12-31 20:40-0500\n"
-"PO-Revision-Date: 2013-01-01 08:39+0000\n"
+"POT-Creation-Date: 2013-01-11 23:46-0500\n"
+"PO-Revision-Date: 2013-01-19 16:11+0000\n"
 "Last-Translator: maxn <maxneupert@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -24,6 +25,14 @@ msgstr "%s Zeichensatz"
 #, tcl-format
 msgid "%s Properties"
 msgstr "%s Eigenschaften"
+
+#, tcl-format
+msgid "%s is complete!"
+msgstr "%s ist vollständig!"
+
+#, tcl-format
+msgid "'%s' already loaded, ignoring %s"
+msgstr "'%s' wurde schon geladen, ignoriere %s"
 
 msgid "(Tcl) INVALID COMMAND NAME: "
 msgstr "(Tcl) UNGÜLTIGER BEFEHL NAME: "
@@ -85,6 +94,9 @@ msgstr "Feld"
 msgid "Array Properties"
 msgstr "Feld-Eingenschaften"
 
+msgid "Associated Files"
+msgstr "Dazugehörige Dateien"
+
 msgid "Atom Box Properties"
 msgstr "Atom Box Eigenschaften"
 
@@ -127,6 +139,10 @@ msgstr "Abbrechen"
 msgid "Cannot read GUI prefs file: "
 msgstr "GUI-Voreinstellungsdatei nicht lesbar:"
 
+#, tcl-format
+msgid "Cannot read plugins folder: '%s'"
+msgstr ""
+
 msgid "Canvas"
 msgstr "Arbeitsfläche"
 
@@ -166,6 +182,13 @@ msgstr "Kopieren"
 msgid "Copying current patch..."
 msgstr "Kopiere aktuellen Patch ..."
 
+msgid "Could not delete 'HKEY_LOCAL_MACHINE\\Software\\Pd-extended':"
+msgstr ""
+
+#, tcl-format
+msgid "Could not parse registry file: '%s'"
+msgstr ""
+
 #, tcl-format
 msgid "Couldn't find '%s' in %s"
 msgstr "Konnte '%s' in %s nicht finden"
@@ -185,6 +208,10 @@ msgstr "DSP An"
 msgid "Data Properties"
 msgstr "Daten-Einstellungen"
 
+#, tcl-format
+msgid "Default font: %s"
+msgstr ""
+
 msgid "Defeat real-time scheduling"
 msgstr "Verhindere Echtzeit-Terminierung"
 
@@ -193,6 +220,16 @@ msgstr "Verzögerung (ms):"
 
 msgid "Delete array"
 msgstr "Feld löschen"
+
+#, tcl-format
+msgid "Deleting preferences file: %s"
+msgstr "Lösche Voreinstellungsdatei: %s"
+
+msgid "Deleting preferences in HKEY_CURRENT_USER\\Software\\Pd-extended"
+msgstr ""
+
+msgid "Deleting preferences in HKEY_LOCAL_MACHINE\\Software\\Pd-extended"
+msgstr ""
 
 #, tcl-format
 msgid "Discard changes to '%s'?"
@@ -216,6 +253,10 @@ msgstr "Editiermodus"
 
 msgid "Edit library"
 msgstr "Bibliothek editieren"
+
+#, tcl-format
+msgid "FAILED TO LOAD %s"
+msgstr ""
 
 msgid "File"
 msgstr "Datei"
@@ -324,6 +365,14 @@ msgstr "Bereich"
 msgid "Load Meter"
 msgstr "Auslastungsanzeige"
 
+#, tcl-format
+msgid "Loading plugin: %s"
+msgstr ""
+
+#, tcl-format
+msgid "Loading translations for %s"
+msgstr "Lade Übersetzungen für %s"
+
 msgid "Log:"
 msgstr "Log:"
 
@@ -345,11 +394,30 @@ msgstr "Eine app aus Ordner erstellen..."
 msgid "Make app from patch..."
 msgstr "Eine app aus Patch erstellen..."
 
+msgid "Making App"
+msgstr ""
+
+#, tcl-format
+msgid "Making App in %s..."
+msgstr ""
+
 msgid "Margin:"
 msgstr "Abstand:"
 
 msgid "Match whole word only"
 msgstr "Ganzes Wort abgleichen"
+
+msgid "Max Binary Files"
+msgstr "Max Binärdateien"
+
+msgid "Max Help Files"
+msgstr "Max Hilfedateien"
+
+msgid "Max Patch Files"
+msgstr "Max Patch Dateien"
+
+msgid "Max Text Files"
+msgstr "Max Textdateien"
 
 msgid "Media"
 msgstr "Medien"
@@ -380,6 +448,10 @@ msgstr "Nächstes Fenster"
 
 msgid "No init"
 msgstr "Kein Init"
+
+msgid ""
+"No patch found! Select an open parent patch with the mouse, then try again."
+msgstr ""
 
 msgid "Number"
 msgstr "Zahl"
@@ -428,6 +500,9 @@ msgstr "Übergeordnetes Fenster"
 
 msgid "Paste"
 msgstr "Einfügen"
+
+msgid "Pd Files"
+msgstr "Pd Dateien"
 
 msgid "Pd Help Browser..."
 msgstr "Pd Hilfe Browser..."
@@ -519,8 +594,16 @@ msgstr "Fehler melden"
 msgid "Reset to Defaults"
 msgstr "Voreinstellungen zurücksetzen"
 
+#, tcl-format
+msgid "Reseting registry from %s"
+msgstr ""
+
 msgid "Right"
 msgstr "Rechts"
+
+#, tcl-format
+msgid "Running: '%s %s'"
+msgstr ""
 
 msgid "Sample rate:"
 msgstr "Samplingrate:"
@@ -563,6 +646,10 @@ msgstr "Eingebettete Voreinstellungen setzen..."
 
 msgid "Setting patch name..."
 msgstr "Setze Patch-Name..."
+
+#, tcl-format
+msgid "Setting up %s/Contents/Info.plist"
+msgstr ""
 
 msgid "Size:"
 msgstr "Größe:"
@@ -654,6 +741,14 @@ msgstr "Vertikaler Radioknopf"
 msgid "Vslider"
 msgstr "Vertikaler Schieberegler"
 
+#, tcl-format
+msgid "WARNING: Font family '%s' not found, using default (%s)"
+msgstr ""
+
+#, tcl-format
+msgid "WARNING: Font weight '%s' not found, using default (%s)"
+msgstr ""
+
 msgid "WARNING: unknown graphme flags received in pdtk_canvas_dialog"
 msgstr "WARNUNG: unbekannte graphme flags in pdtk_canvas_dialog empfangen"
 
@@ -707,6 +802,9 @@ msgstr "Audio I/O Fehler"
 
 msgid "bottom:"
 msgstr "unten:"
+
+msgid "converted Max binary to text format:"
+msgstr ""
 
 msgid "debug"
 msgstr "debug"
