update Japanese translation

--- a/po/ja.po
+++ b/po/ja.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2013-01-11 23:46-0500\n"
-"PO-Revision-Date: 2013-01-19 05:52+0000\n"
+"PO-Revision-Date: 2013-01-20 14:34+0000\n"
 "Last-Translator: Sei Matsumura <serv@low-tech-ism.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -64,7 +64,7 @@ msgid "--------flash-time(ms)(ms):---------"
 msgstr "--------点滅時間(ms)(ms):---------"
 
 msgid "-------dimensions(digits)(pix):-------"
-msgstr "I-------表示サイズ(digits)(pix):-------"
+msgstr "-------表示サイズ(digits)(pix):-------"
 
 msgid "------selectable_dimensions(pix):------"
 msgstr "------選択可能部分の表示サイズ(pix):------"
@@ -97,7 +97,7 @@ msgid "Associated Files"
 msgstr "関連ファイル"
 
 msgid "Atom Box Properties"
-msgstr "ナンバーボックス プロパティ"
+msgstr "Atomボックスのプロパティ"
 
 msgid "Audio Settings"
 msgstr "オーディオ設定"
