--- a/po/hu.po
+++ b/po/hu.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
-"POT-Creation-Date: 2013-01-09 00:45-0500\n"
-"PO-Revision-Date: 2013-01-10 00:55+0000\n"
+"POT-Creation-Date: 2013-01-11 23:46-0500\n"
+"PO-Revision-Date: 2013-01-22 23:34+0000\n"
 "Last-Translator: muranyia <muranyia@gmail.com>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/puredata/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -140,7 +140,7 @@ msgstr "Nem sikerül a GUI beállításokat olvasni:"
 
 #, tcl-format
 msgid "Cannot read plugins folder: '%s'"
-msgstr ""
+msgstr "Nem sikerül a plugin mappát olvasni: '%s'"
 
 msgid "Canvas"
 msgstr "Canvas"
@@ -181,6 +181,13 @@ msgstr "Másol"
 msgid "Copying current patch..."
 msgstr "Az aktuális patch másolása..."
 
+msgid "Could not delete 'HKEY_LOCAL_MACHINE\\Software\\Pd-extended':"
+msgstr ""
+
+#, tcl-format
+msgid "Could not parse registry file: '%s'"
+msgstr "Nem sikerült a regisztrációs fájlt feldolgozni: '%s'"
+
 #, tcl-format
 msgid "Couldn't find '%s' in %s"
 msgstr "Nem található '%s' itt: %s"
@@ -212,6 +219,16 @@ msgstr "Késés (ms):"
 
 msgid "Delete array"
 msgstr "Tömböt töröl"
+
+#, tcl-format
+msgid "Deleting preferences file: %s"
+msgstr "Beállítás fájl törlése: %s"
+
+msgid "Deleting preferences in HKEY_CURRENT_USER\\Software\\Pd-extended"
+msgstr ""
+
+msgid "Deleting preferences in HKEY_LOCAL_MACHINE\\Software\\Pd-extended"
+msgstr ""
 
 #, tcl-format
 msgid "Discard changes to '%s'?"
@@ -371,17 +388,17 @@ msgid "Magic Glass"
 msgstr "Varázsszemüveg"
 
 msgid "Make app from folder..."
-msgstr ""
+msgstr "App készítése mappából..."
 
 msgid "Make app from patch..."
-msgstr ""
+msgstr "App készítése patch-ből..."
 
 msgid "Making App"
-msgstr ""
+msgstr "App készítése"
 
 #, tcl-format
 msgid "Making App in %s..."
-msgstr ""
+msgstr "App készítése itt: %s"
 
 msgid "Margin:"
 msgstr "Margó:"
@@ -575,6 +592,10 @@ msgstr "Hibabejelentés"
 
 msgid "Reset to Defaults"
 msgstr "Vissza az alapbeállításokhoz"
+
+#, tcl-format
+msgid "Reseting registry from %s"
+msgstr ""
 
 msgid "Right"
 msgstr "Jobb"
